[gd_scene load_steps=2 format=3 uid="uid://bc5ufha8k7c5j"]

[ext_resource type="Script" path="res://scripts/ui/theme_switcher.gd" id="1_theme_switcher"]

[node name="ThemeSwitcher" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 200.0
script = ExtResource("1_theme_switcher")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Theme Selection"
horizontal_alignment = 1

[node name="ThemeOptionButton" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="PreviewLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Preview: Select a theme to see preview"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ApplyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Apply Theme"